Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55966

konsole crashes on Yakkety due to a dbusmenu problem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.3
    • 5.6.1
    • QPA: X11/XCB
    • None
    • 5ca9631d3a0717afb066471ed5eb3b3ed9a9c08a f88f405401cc5dcb98cce37f3237bf37b51f77af

    Description

      https://launchpad.net/bugs/1620937

      Valgrind output copied from that bug:

      ==13390== Invalid read of size 8
      ==13390==    at 0x184CAF49: QList (qlist.h:797)
      ==13390==    by 0x184CAF49: QDBusPlatformMenu::items() const (qdbusplatformmenu.cpp:281)
      ==13390==    by 0x184E4C29: QDBusMenuLayoutItem::populate(QDBusPlatformMenu const*, int, QStringList const&) (qdbusmenutypes.cpp:110)
      ==13390==    by 0x184E4B60: QDBusMenuLayoutItem::populate(QDBusPlatformMenuItem const*, int, QStringList const&) (qdbusmenutypes.cpp:125)
      ==13390==    by 0x184E4D28: QDBusMenuLayoutItem::populate(QDBusPlatformMenu const*, int, QStringList const&) (qdbusmenutypes.cpp:112)
      ==13390==    by 0x184E4B60: QDBusMenuLayoutItem::populate(QDBusPlatformMenuItem const*, int, QStringList const&) (qdbusmenutypes.cpp:125)
      ==13390==    by 0x184E4D28: QDBusMenuLayoutItem::populate(QDBusPlatformMenu const*, int, QStringList const&) (qdbusmenutypes.cpp:112)
      ==13390==    by 0x184E5D36: QDBusMenuLayoutItem::populate(int, int, QStringList const&, QDBusPlatformMenu const*) (qdbusmenutypes.cpp:90)
      ==13390==    by 0x184DF049: QDBusMenuAdaptor::GetLayout(int, int, QStringList const&, QDBusMenuLayoutItem&) (qdbusmenuadaptor.cpp:144)
      ==13390==    by 0x184D7E00: QDBusMenuAdaptor::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (moc_qdbusmenuadaptor_p.cpp:217)
      ==13390==    by 0x184D8817: QDBusMenuAdaptor::qt_metacall(QMetaObject::Call, int, void**) (moc_qdbusmenuadaptor_p.cpp:332)
      ==13390==    by 0x411EE87: QDBusConnectionPrivate::deliverCall(QObject*, int, QDBusMessage const&, QVector<int> const&, int) (qdbusintegrator.cpp:990)
      ==13390==    by 0x4122D4C: QDBusConnectionPrivate::activateCall(QObject*, int, QDBusMessage const&) (qdbusintegrator.cpp:893)
      ==13390==  Address 0x280e1cb8 is 56 bytes inside a block of size 72 free'd
      ==13390==    at 0x4C2E26B: operator delete(void*) (vg_replace_malloc.c:576)
      ==13390==    by 0x7CD2F11: QMenuPrivate::~QMenuPrivate() (qmenu_p.h:307)
      ==13390==    by 0x7CD2F98: QMenuPrivate::~QMenuPrivate() (qmenu_p.h:311)
      ==13390==    by 0x88B51D6: cleanup (qscopedpointer.h:54)
      ==13390==    by 0x88B51D6: ~QScopedPointer (qscopedpointer.h:101)
      ==13390==    by 0x88B51D6: QObject::~QObject() (qobject.cpp:893)
      ==13390==    by 0x7B84E1F: QWidget::~QWidget() (qwidget.cpp:1539)
      ==13390==    by 0x7CCC4F8: QMenu::~QMenu() (qmenu.cpp:1511)
      ==13390==    by 0x88AE5DF: QObject::event(QEvent*) (qobject.cpp:1247)
      ==13390==    by 0x7B8958A: QWidget::event(QEvent*) (qwidget.cpp:9178)
      ==13390==    by 0x7CD24DA: QMenu::event(QEvent*) (qmenu.cpp:2748)
      ==13390==    by 0x7B438AB: QApplicationPrivate::notify_helper(QObject*, QEvent*) (qapplication.cpp:3804)
      ==13390==    by 0x7B48D4E: QApplication::notify(QObject*, QEvent*) (qapplication.cpp:3561)
      ==13390==    by 0x88802BF: QCoreApplication::notifyInternal2(QObject*, QEvent*) (qcoreapplication.cpp:1015)
      ==13390==  Block was alloc'd at
      ==13390==    at 0x4C2D1AF: operator new(unsigned long) (vg_replace_malloc.c:334)
      ==13390==    by 0x184CAFCA: QDBusPlatformMenu::createSubMenu() const (qdbusplatformmenu.cpp:292)
      ==13390==    by 0x7CC8CD4: copyActionToPlatformItem(QAction const*, QPlatformMenuItem*, QPlatformMenu*) (qmenu.cpp:3235)
      ==13390==    by 0x7CCC1FC: QMenu::actionEvent(QActionEvent*) (qmenu.cpp:3290)
      ==13390==    by 0x7B89397: QWidget::event(QEvent*) (qwidget.cpp:9114)
      ==13390==    by 0x7CD24DA: QMenu::event(QEvent*) (qmenu.cpp:2748)
      ==13390==    by 0x7B438AB: QApplicationPrivate::notify_helper(QObject*, QEvent*) (qapplication.cpp:3804)
      ==13390==    by 0x7B48D4E: QApplication::notify(QObject*, QEvent*) (qapplication.cpp:3561)
      ==13390==    by 0x88802BF: QCoreApplication::notifyInternal2(QObject*, QEvent*) (qcoreapplication.cpp:1015)
      ==13390==    by 0x7B80857: sendEvent (qcoreapplication.h:225)
      ==13390==    by 0x7B80857: QWidget::insertAction(QAction*, QAction*) (qwidget.cpp:3314)
      ==13390==    by 0x5EAB6D6: ??? (in /usr/lib/x86_64-linux-gnu/libKF5XmlGui.so.5.24.0)
      ==13390==    by 0x5EAC58F: ??? (in /usr/lib/x86_64-linux-gnu/libKF5XmlGui.so.5.24.0)
      =
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mandriver Dmitry Shachnev
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes